# ProductivityLog

./: .gitignore  Makefile  ProdLogUtils.py  README.md  classifier.py  hardcoded_classifier.py  logger.py  pyproject.toml
src/: ProdLogUtils.py  classifier.py  feature_extract.py  hardcoded_classifier.py  quick_summary.sh
src/dashboard/: analytics.py  app.py  charts.py  log_parser.py  monitor.py
src/dashboard/templates/: base.html  range.html  summary.html  today.html
