[project]
name = "productivitylog"
version = "0.1.0"
description = "Personal productivity log analysis dashboard"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0",
    "plotly>=5.0",
    "pandas>=2.0",
    "numpy>=1.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
prodlog-dashboard = "src.dashboard.app:main"
